ec2/ec2-instance.tf
variable "ami_id" {}
variable "ami_type" {}

//Launching EC2 Instance
resource "aws_instance" "web" {
  ami             = "${var.ami_id}"
  instance_type   = "${var.ami_type}"
  key_name        = "${aws_key_pair.generated_key.key_name}"
  security_groups = ["${aws_security_group.web-SG.name}","default"]

  //Labelling the Instance
  tags = {
    Name = "Web-Env"
    env  = "Production"
  }

  //Copy our Wesite Code i.e. HTML File in Instance Webserver Document Rule
  provisioner "file" {
    connection {
      agent       = false
      type        = "ssh"
      user        = "ec2-user"
      private_key = "${tls_private_key.tls_key.private_key_pem}"
      host        = "${aws_instance.web.public_ip}"
    }

    source      = "webapp.html"
    destination = "/home/ec2-user/webapp.html" 
  }


  //Executing Commands to initiate WebServer in Instance Over SSH 
  provisioner "remote-exec" {
    connection {
      agent       = "false"
      type        = "ssh"
      user        = "ec2-user"
      private_key = "${tls_private_key.tls_key.private_key_pem}"
      host        = "${aws_instance.web.public_ip}"
    }
    
    inline = [
      "sudo yum install httpd -y",
      "sudo systemctl start httpd",
      "sudo systemctl enable httpd",
    ]

  }

  depends_on = [
    aws_security_group.web-SG,
    aws_key_pair.generated_key
  ]
}

output "instance_public_dns" {
  value = "${aws_instance.web.public_dns}"
}

output "instance_public_ip" {
  value = "${aws_instance.web.public_ip}"
}

output "instance_az" {
  value = "${aws_instance.web.availability_zone}"
}
